Markup and CSS is done
I just need to write the carousel functionality and fix any early IE
bugs.

--- a/css/nat.css
+++ b/css/nat.css
@@ -1,6 +1,7 @@
 ﻿@import url("nat_banner.css");
 @import url("nat_navigation.css");
 @import url("nat_main.css");
+@import url("nat_footer.css");
 
 body
 {
