--- a/css/nat_main__ads.css
+++ b/css/nat_main__ads.css
@@ -12,3 +12,12 @@
     left: 706px;
     top: 20px;
 }
+
+    .nat_main__ad
+    {
+        width: 274px;
+        height: 200px;
+        padding: 0px;
+        margin: 0px 0px 20px 0px;
+        border: none;
+    }
