--- a/css/nat_banner__search.css
+++ b/css/nat_banner__search.css
@@ -8,46 +8,37 @@
     position: absolute;
     left: 740px;
     top: 31px;
-    background: transparent url("../images/nat_banner_searchBackground.png") no-repeat;
+    background: transparent url("../images/nat_banner_sprite.png") no-repeat 0px -116px;
+    font-size: 12px;
 }
-
-    .nat_banner__search form
+        
+    .nat_banner__search input[type="text"]
     {
-        width: 260px;
+        width: 220px;
+        height: 24px;
+        padding: 2px 0px 0px 10px;
+        margin: 0px;
+        border: none;
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        z-index: 0; 
+        background: transparent; 
+        color: rgb(156, 159, 163);
+        font: normal 1em Helvetica, Arial;                              
+    }
+
+    .nat_banner__search input[type="submit"]
+    {
+        width: 30px;
         height: 26px;
         padding: 0px;
         margin: 0px;
         border: none;
-        position: relative;
+        position: absolute;
+        left: 230px;
+        top: 0px;
+        z-index: 10;
+        background: transparent url("../images/nat_banner_sprite.png") no-repeat 9px -84px;
+        cursor: pointer;
     }
-        
-        .nat_banner__search input[type="text"]
-        {
-            width: 230px;
-            height: 26px;
-            padding: 0px;
-            margin: 0px;
-            border: none;
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            z-index: 0; 
-            background: transparent; 
-            color: rgb(156, 159, 163);
-                              
-        }
-
-        .nat_banner__search input[type="submit"]
-        {
-            width: 30px;
-            height: 26px;
-            padding: 0px;
-            margin: 0px;
-            border: none;
-            position: absolute;
-            left: 230px;
-            top: 0px;
-            z-index: 10;
-            background: transparent url("../images/nat_banner_searchButton.png") no-repeat;
-            cursor: pointer;
-        }
