--- a/css/nat-lt-ie9.css
+++ b/css/nat-lt-ie9.css
@@ -3,4 +3,11 @@
     display: block;
 }
 
+.nat_main__imageCarousel___mainImage figcaption,
+.nat_main__popularVideos figure > figcaption
+{
+    filter:progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+    background-color: rgb(227, 228, 228);
+}
+
 
